@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.0.0-rc2
 ====================================
+- Fix xPDOObject::_loadInstance() to work with xPDOQuery::hydrateGraphNode() properly
 - Fix bug in xPDOObject::load() when caching by primary key
 - Fix bug with xPDOManager_sqlite::removeSourceContainer()
 - [#XPDO-62] Make getObjectGraph() respect class_key
